[tool.poetry]
name = "protoclust"
version = "0.1.0"
description = ""
authors = ["andy <andygold@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.0"

# Can use shipped binaries
cython = {version = "^0.29.17", optional = true}

# Docs and examples
sphinx = {version = "^3.0.3", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
