[tool.poetry]
name = "pyprotoclust"
version = "0.1.0"
description = "Hierarchical clustering using minimax linkage."
authors = ["Andy Goldschmidt <andygold@uw.edu>"]
repository = "https://github.com/andgoldschmidt/pyprotoclust"
documentation = "https://pyprotoclust.readthedocs.io/"
keywords = ["hierarchical", "clustering", "minimax", "prototypes"]
license = "MIT"
readme = 'README.rst'
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.0"

# Optional if using supplied cpps
cython = {version = "^0.29.17", optional = true}

# Docs and examples
sphinx = {version = "^3.0.3", optional = true}
sklearn = {version = "^0.0", optional = true}
scipy = {version = "^1.4.1", optional = true}
nbsphinx = {version = "^0.7.0", optional = true}
jupyter_client = {version = "^6.1.3", optional = true}
ipykernel = {version = "^5.2.1", optional = true}
matplotlib = {version = "^3.2.1", optional = true}
ipywidgets = {version = "^7.5.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
cython = ["cython"]
docs = ["sphinx", "sklearn", "scipy", "nbsphinx", "jupyter_client", "ipykernel", "matplotlib", "ipywidgets"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
